css/enquiry.css
.main-container {
    display: flex;
    flex-direction: column;
}

form {
    display: flex;
    flex-direction: column;
    width: 60%;
}

.form-div {
    display: flex;
    margin-bottom: 20px;
}

.label-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50%;
    height: 50px;
    text-align: left;
    margin: auto;
}

.input-div {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50%;
}

input {
    width: 100%;
    height: 20px;
    background-color: #eceae8;
    border: #28231e solid;
    border-width: 1px;
    border-radius: 10px;
    padding: 17.5px 10px 17.5px 10px;
    box-sizing:border-box;
    vertical-align: top;
    font-family: 'Prompt', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
    font-size: 15px;
}

input[type="datetime-local"] {
    appearance: none;
    -webkit-appearance: none;
}

input.error {
    -webkit-animation: shake 0.15s ease-in-out 0s 2;
    animation: shake 0.15s ease-in-out 0s 2;
}

form button {
    border: #433e3c solid;
    border-radius: 50px;
    border-width: 1px;
    height: 40px;
    padding: 0px;
    margin: 30px auto 40px auto;
    background-color: #28231e;
    color: #eceae8;
    width: 80%;
    font-family: 'Prompt', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
}

form button:hover {
    cursor: pointer;
}

.input-error {
    display: none;
    position: absolute;
    top: 45px;
    left: 10px;
    color: red;
    z-index: 1;
    font-size: 14px;
    font-weight: bolder;
}

select {
    width: 100%;
    height: 37px;
    background-color: #eceae8;
    border: #28231e solid;
    border-width: 1px;
    border-radius: 10px;
    padding: 10px 20px 10px 10px;
    font-size: 15px;
    font-family: 'Prompt', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;

    appearance: none;
    background-image: url("../images/chevron-down-solid.svg");
    background-repeat: no-repeat;
    background-position: right 1rem center;
    background-size: 10px;

}

textarea {
    width: 100%;
    height: 40px;
    padding: 7.5px 10px;
    box-sizing: border-box;
    border: 1px solid #28231e;
    border-radius: 10px;
    background-color: #eceae8;
    resize: none;
    font-family: 'Prompt', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
    font-size: 15px;
    overflow: hidden;
}

textarea:focus {
    outline: #28231e solid 1px;
}

input:focus {
    outline: #28231e solid 1px;
}

.item-1 {
    padding: 0;
}

.select-btn {
    display: flex;
    height: 35px;
    justify-content: space-between;
    align-items: center;
    padding: 0px 20px 0px 10px;
    border-radius: 10px;
    border: 1px solid #28231e;
    color: black;
    font-size: 15px;
}

.list-items {
    position: relative;
    width: calc(100% - 20px);
    margin-top: 5px;
    background-color: #eceae8;
    border-radius: 10px;
    border: 1px solid #28231e;
    padding: 10px;
    height: 250px;
    overflow: scroll;
    display: none;
}

.select-btn.open ~ .list-items {
    display: block;
    position: absolute;
    z-index: 1;;
    top: 45px;
    left: 0px;
}

.select-btn .arrow-dwn {
    transition: 0.3s;
}

.select-btn.open .arrow-dwn {
   transform: scaleY(-1);
}

.list-items .li-item {
    list-style: none;
    display: flex;
    gap: 10px;
    padding: 0 15px;
    align-items: center;
    height: 30px;
    cursor: pointer;
    transition: 0.3s;
    border-radius: 8px;
}

.list-items .li-item:hover {
    background-color: #ded8d3;
}

.list-items .li-header-item {
    list-style: none;
    display: flex;
    align-items: center;
    height: 30px;
    padding: 0 15px;
}

.li-item .checkbox {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 16px;
    width: 16px;
    border: 1px solid #28231e;
    border-radius: 4px;
    transition: all 0.3s ease-in-out;
}

.li-item .item-text {
    font-size: 14px;
}

.li-header-item .item-header-text {
    font-size: 16px;
    font-weight: bolder;

}

.checkbox .check-icon {
    transform: scale(0);
    transition: all 0.2s ease-in-out;
}

.li-item.checked .check-icon {
    transform: scale(1);
}


@-webkit-keyframes shake {
    0% {
      margin-left: 0rem;
    }
    25% {
      margin-left: 0.3rem;
    }
    75% {
      margin-left: -0.3rem;
    }
    100% {
      margin-left: 0rem;
    }
  }
  
  @keyframes shake {
    0% {
      margin-left: 0rem;
    }
    25% {
      margin-left: 0.3rem;
    }
    75% {
      margin-left: -0.3rem;
    }
    100% {
      margin-left: 0rem;
    }
  }

@media screen and (max-width: 600px) {
    form {
        width: 100%;
    }
    .item-1 {
        padding: 40px;
    }
    .label-div {
        width: 100%;
        justify-content: end;
        margin-bottom: 5px;
        height: auto;
    }
    .input-div {
        width: 100%;
        margin-bottom: 15px;
    }
    .form-div {
        flex-direction: column;
    }
    form button {
        width: 100%;
        margin: 30px auto 20px auto;
    }
    select {
        padding: 8px 20px 8px 10px;
    }
}

